--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -14,7 +14,10 @@ body {
 /* NAV - cor de fundo clara e alinhamento em coluna */
 .navegacao {
     background-color: #121212;
-    border-radius: 10px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
     display: flex;
     flex-direction: column;
 }
@@ -43,34 +46,6 @@ body {
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-}
-
-.button-login {
-    position: fixed; /* Mantém o botão fixo mesmo ao rolar a página */
-    top: 10px; /* Define a distância do topo */
-    right: 10px; /* Define a distância da direita */
-    z-index: 100; /* Garante que ele fique acima de outros elementos */
-}
-
-.button-login button {
-    padding: 10px 25px;
-    background-color: #fff;
-    color: #000000;
-    border: none;
-    text-decoration: none;
-    text-transform: none;
-    border-radius: 20px;
-    font-size: 14px;
-    font-weight: 600;
-    font-family: "DM Sans", sans-serif;
-    cursor: pointer;
-    transition: 0.2s;
-}
-
-.button-login button:hover {
-    background-color: #1DB954;
-    color: #fff;
-    text-decoration: underline;
 }
 
 .biblioteca {
@@ -197,38 +172,6 @@ body {
     border-radius: 20px;
 }
 
-.footer {
-    font-family: "DM Sans", sans-serif;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    color: #fff;
-    background: linear-gradient(to right, #ff007f, #007bff);
-    padding: 20px;
-}
-
-.footer-conteudo {
-    display: flex;
-    justify-content: space-between;
-}
-
-.footer-texto p{
-    font-weight: 500;
-    font-size: 14px;
-    text-align: left;
-    margin-bottom: 10px;
-}
-
-.footer-conteudo button {
-    padding: 5px 25px;
-    border-radius: 20px;
-    font-weight: 700;
-    font-size: 14px;
-    text-decoration: none;
-    text-transform: none;
-}
-
 .section-genero {
     background-color: #302e2e;
     border-radius: 10px;
@@ -258,5 +201,126 @@ body {
 
 .section-genero ul li a:hover {
     text-decoration: underline;
+}
+
+.pesquisa {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    z-index: 100;
+}
+
+.pesquisa-conteudo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-family: "DM Sans", sans-serif;
+}
+
+.pesquisa-conteudo button {
+    background-color: transparent;
+    text-decoration: none;
+    text-transform: none;
+    border: none;
+    cursor: pointer;
+}
+
+.pesquisa-conteudo button img {
+    width: 24px;
+    height: 24px;
+}
+
+.pesquisa-conteudo__input {
+    display: flex;
+    align-items: center;
+    background-color: #121212;
+    border-radius: 20px;
+    padding: 5px 10px;
+}
+
+.pesquisa-conteudo__input input {
+    background-color: transparent;
+    border: 1px solid #b3b3b3;
+    text-decoration: none;
+    text-transform: none;
+    border-radius: 20px;
+    padding: 6px 30px;
+    text-align: center;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.pesquisa-conteudo__input .button-search {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    gap: 10px;
+}
+
+.button-login { 
+    position: fixed; /* Mantém o botão fixo mesmo ao rolar a página */
+    top: 10px; /* Define a distância do topo */
+    right: 10px; /* Define a distância da direita */
+    z-index: 100; /* Garante que ele fique acima de outros elementos */
+}
+
+.button-login button {
+    padding: 10px 25px;
+    background-color: #fff;
+    color: #000000;
+    border: none;
+    text-decoration: none;
+    text-transform: none;
+    border-radius: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: "DM Sans", sans-serif;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.button-login button:hover {
+    background-color: #1DB954;
+    color: #fff;
+    text-decoration: underline;
+}
+
+.footer {
+    font-family: "DM Sans", sans-serif;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: #fff;
+    background: linear-gradient(to right, #ff007f, #007bff);
+    padding: 15px;
+}
+
+.footer-conteudo {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-texto p{
+    text-align: center;
+    font-weight: 500;
+    font-size: 14px;
+    text-align: left;
+    padding-bottom: 5px;
+}
+
+.footer-conteudo button {
+    padding: 12px 25px;
+    border-radius: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    text-decoration: none;
+    text-transform: none;
 }
 
